[tool.poetry]
name = "recordsql"
version = "0.2.0"
description = "A Python-based SQL query builder with a fluent and composable interface, built on expressql."
authors = ["Grayjou <cgrayjou@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Grayjou/recordsql"
repository = "https://github.com/Grayjou/recordsql"
documentation = "https://github.com/Grayjou/recordsql#readme"
keywords = [
    "SQL", 
    "query-builder", 
    "Python", 
    "DSL", 
    "expressql", 
    "chained comparisons", 
    "placeholder", 
    "SQL conditions", 
    "CTE", 
    "JOIN"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14", 
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "recordsql"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
expressql = "1.0.0"
tablesqlite = {version = "^0.1.8", optional = true}

[tool.poetry.extras]
tablesqlite = ["tablesqlite"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
sphinx-autodoc-typehints = "^1.25"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

