[project]
name = "recordsql"
version = "0.2.0"
description = "A Python-based SQL query builder with a fluent and composable interface, built on expressql."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Grayjou", email = "cgrayjou@gmail.com"}
]
keywords = [
    "SQL",
    "query-builder",
    "Python",
    "DSL",
    "expressql",
    "chained comparisons",
    "placeholder",
    "SQL conditions",
    "CTE",
    "JOIN"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8.1,<4.0"
dependencies = [
    "expressql==1.0.0",
]

[project.optional-dependencies]
tablesqlite = [
    "tablesqlite>=0.1.8,<0.2.0",
]

[project.urls]
homepage = "https://github.com/Grayjou/recordsql"
repository = "https://github.com/Grayjou/recordsql"
documentation = "https://github.com/Grayjou/recordsql#readme"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
sphinx-autodoc-typehints = "^1.25"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

